# project_y

./: .gitignore  CLAUDE.md  README.md  aleph.env.docker.example  conftest.py  docker-compose.aleph.yml  pyproject.toml
docker/elasticsearch/: Dockerfile
docs/dependency-decisions/: deep-agents.md  followthemoney.md  pyyaml.md
docs/spikes/: 01-corpus-snapshot.md
server/: .env.example
skills/cross-reference-pep/: SKILL.md
skills/cross-reference-pep/tests/: conftest.py  test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/cross-reference-pep/tests/fixtures/: corpus.json
skills/detect-procurement-collusion/: SKILL.md
skills/detect-procurement-collusion/tests/: test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/detect-procurement-collusion/tests/fixtures/: award_decision_2024.txt  bid_acme.txt  bid_beta.txt  brief.txt  expected_signals.json  registry_extract.txt  tender_specs.txt
skills/find-money-flow/: SKILL.md
skills/find-money-flow/tests/: _find_money_flow_lib.py  test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/find-money-flow/tests/fixtures/: README.md  doc-001.txt  doc-002.txt  doc-003.txt
skills/find-shell-companies/: SKILL.md
skills/find-shell-companies/tests/: test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/flag-suspect-doc/: SKILL.md
skills/flag-suspect-doc/tests/: _frontmatter.py  test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/flag-suspect-doc/tests/fixtures/: README.md  contract_unexplained_intermediary.meta.json  contract_unexplained_intermediary.txt  invoice_clean.meta.json  invoice_clean.txt  invoice_high_risk.meta.json  invoice_high_risk.txt
skills/narrate-fraud-pattern/: SKILL.md
skills/narrate-fraud-pattern/tests/: test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/summarize-by-entity/: SKILL.md
skills/summarize-by-entity/tests/: conftest.py  test_integration.py  test_resolver.py  test_skill_frontmatter.py
skills/summarize-by-entity/tests/fixtures/: doc-001-en-contract.txt  doc-002-it-filing.txt  doc-003-en-wire.txt
src/agent/: __init__.py  deep_agents_harness.py  harness.py
src/aleph/: __init__.py  client.py  document_source.py  snapshot.py
src/audit/: __init__.py  log.py
src/schema/: __init__.py  brief.py  note.py
src/skills/: __init__.py  skill.py
src/verifier/: __init__.py  document_source.py  ftm.py  substring.py
tests/: test_aleph_client.py  test_audit_log.py  test_brief.py  test_deep_agents_golden.py  test_deep_agents_harness.py  test_deep_agents_integration.py  test_ftm_validators.py  test_harness_interface.py  test_note_schema.py  test_snapshot.py  test_substring_verifier.py
tests/fixtures/adversarial/: README.md  translation_markers.py
tests/fixtures/adversarial/near_quotes/: README.md  cases.json
tests/fixtures/adversarial/ocr_drift/: README.md  pairs.json
tests/fixtures/adversarial/translations/: README.md  cases.json
tests/fixtures/adversarial/unicode/: README.md  nfc_nfd_pairs.json
tests/golden/deep_agents/: checkpoint_id.txt  checkpoint_payload.json  dispatched_skill_ids.json  skill_load_order.json
