[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_y"
version = "0.0.0"
description = "Audit-grade AI investigator on OpenAleph + FtM (OLAF-internal)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "deepagents==0.4.12",
    "langchain-openai==1.2.1",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/audit", "src/schema", "src/skills", "src/verifier"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: live-endpoint test (skipped unless LLM_* env vars are set)",
]
